# Jwarn

./: .gitignore  CMakeLists.txt  JWARN.C  JWARN.H  MAKEFILE  MESSAGE.H  Makefile  READ.ME  README.md  RULES.C  TABLE.C  TABLE.H  portab.h
VS2019/: jwarn.vcxproj  jwarn.vcxproj.filters  portab.h
VS2022/: jwarn.sln  jwarn.vcxproj  jwarn.vcxproj.filters
